crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_tpch_q18_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q18"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                         |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: orders.o_totalprice DESC NULLS FIRST, orders.o_orderdate ASC NULLS LAST                                                                                                                                                |
|               |   Aggregate: groupBy=[[customer.c_name, customer.c_custkey, orders.o_orderkey, orders.o_orderdate, orders.o_totalprice]], aggr=[[sum(lineitem.l_quantity)]]                                                                  |
|               |     LeftSemi Join: orders.o_orderkey = __correlated_sq_1.l_orderkey                                                                                                                                                          |
|               |       Projection: customer.c_custkey, customer.c_name, orders.o_orderkey, orders.o_totalprice, orders.o_orderdate, lineitem.l_quantity                                                                                       |
|               |         Inner Join: orders.o_orderkey = lineitem.l_orderkey                                                                                                                                                                  |
|               |           Projection: customer.c_custkey, customer.c_name, orders.o_orderkey, orders.o_totalprice, orders.o_orderdate                                                                                                        |
|               |             Inner Join: customer.c_custkey = orders.o_custkey                                                                                                                                                                |
|               |               TableScan: customer projection=[c_custkey, c_name]                                                                                                                                                             |
|               |               TableScan: orders projection=[o_orderkey, o_custkey, o_totalprice, o_orderdate]                                                                                                                                |
|               |           TableScan: lineitem projection=[l_orderkey, l_quantity]                                                                                                                                                            |
|               |       SubqueryAlias: __correlated_sq_1                                                                                                                                                                                       |
|               |         Projection: lineitem.l_orderkey                                                                                                                                                                                      |
|               |           Filter: sum(lineitem.l_quantity) > Decimal128(300.00,25,2)                                                                                                                                                         |
|               |             Aggregate: groupBy=[[lineitem.l_orderkey]], aggr=[[sum(lineitem.l_quantity)]]                                                                                                                                    |
|               |               TableScan: lineitem projection=[l_orderkey, l_quantity]                                                                                                                                                        |
| physical_plan | SortPreservingMergeExec: [o_totalprice@4 DESC, o_orderdate@3 ASC NULLS LAST]                                                                                                                                                 |
|               |   SortExec: expr=[o_totalprice@4 DESC, o_orderdate@3 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                           |
|               |     AggregateExec: mode=SinglePartitioned, gby=[c_name@1 as c_name, c_custkey@0 as c_custkey, o_orderkey@2 as o_orderkey, o_orderdate@4 as o_orderdate, o_totalprice@3 as o_totalprice], aggr=[sum(lineitem.l_quantity)]     |
|               |       HashJoinExec: mode=Partitioned, join_type=LeftSemi, accumulator=MinMaxLeftAccumulator, on=[(o_orderkey@2, l_orderkey@0)]                                                                                               |
|               |         HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(o_orderkey@2, l_orderkey@0)], projection=[c_custkey@0, c_name@1, o_orderkey@2, o_totalprice@3, o_orderdate@4, l_quantity@6] |
|               |           RepartitionExec: partitioning=Hash([o_orderkey@2], 16), input_partitions=16                                                                                                                                        |
|               |             HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(c_custkey@0, o_custkey@1)], projection=[c_custkey@0, c_name@1, o_orderkey@2, o_totalprice@4, o_orderdate@5]             |
|               |               RepartitionExec: partitioning=Hash([c_custkey@0], 16), input_partitions=16                                                                                                                                     |
|               |                 SchemaCastScanExec                                                                                                                                                                                           |
|               |                   BytesProcessedExec                                                                                                                                                                                         |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                              |
|               |               RepartitionExec: partitioning=Hash([o_custkey@1], 16), input_partitions=16                                                                                                                                     |
|               |                 SchemaCastScanExec                                                                                                                                                                                           |
|               |                   BytesProcessedExec                                                                                                                                                                                         |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                              |
|               |           RepartitionExec: partitioning=Hash([l_orderkey@0], 16), input_partitions=16                                                                                                                                        |
|               |             SchemaCastScanExec                                                                                                                                                                                               |
|               |               BytesProcessedExec                                                                                                                                                                                             |
|               |                 DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                  |
|               |         FilterExec: sum(lineitem.l_quantity)@1 > 300.00, projection=[l_orderkey@0]                                                                                                                                           |
|               |           AggregateExec: mode=FinalPartitioned, gby=[l_orderkey@0 as l_orderkey], aggr=[sum(lineitem.l_quantity)]                                                                                                            |
|               |             RepartitionExec: partitioning=Hash([l_orderkey@0], 16), input_partitions=16                                                                                                                                      |
|               |               AggregateExec: mode=Partial, gby=[l_orderkey@0 as l_orderkey], aggr=[sum(lineitem.l_quantity)]                                                                                                                 |
|               |                 SchemaCastScanExec                                                                                                                                                                                           |
|               |                   BytesProcessedExec                                                                                                                                                                                         |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                              |
|               |                                                                                                                                                                                                                              |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
